<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_medium_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:src="@drawable/joke_3"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:orientation="vertical">

                <TextView
                    android:text="@string/wun_zin_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wun_zin_author"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wun_zin_prize"
                    android:textColor="@android:color/black"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wun_zin_buy"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wun_zin_sample"
                    />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wun_zin_file_size"
            android:textColor="@android:color/black"
            android:textSize="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wun_zin_summary"
            android:textSize="16dp"
            android:textStyle="italic"
            android:textColor="@android:color/holo_orange_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wun_zin_dot"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:textColor="@android:color/holo_orange_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/wun_zin_related"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:textColor="@android:color/holo_orange_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wun_zin_kinds"
            android:textSize="16dp"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:textColor="@android:color/holo_orange_light"/>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:columnCount="4">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/joke_3"/>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/joke_2"/>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/joke_3"/>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/joke_2"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/joke_3"/>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/joke_2"/>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/joke_3"/>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/joke_2"/>
            </GridLayout>
        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>