<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_youtshin"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/margin_medium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_showing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/youtshin_showing"/>

            <TextView
                android:id="@+id/tv_youtshin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/youtshin_movie1"
                />

            <TextView
                android:id="@+id/tv_movie_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:textStyle="bold"
                android:text="@string/youtshin_place"/>

            <TextView
                android:id="@+id/tv_movie_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:text="@string/youtshin_time"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="48dp"
            android:layout_alignParentRight="true">

            <ImageButton
                android:id="@+id/img_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_black_24dp"/>

            <ImageButton
                android:id="@+id/img_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:src="@drawable/ic_local_phone_black_24dp"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>