<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="-16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:src="@drawable/youtshin_1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:orientation="vertical">

                <TextView
                    android:text="@string/youtshin_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textAllCaps="true"
                    android:textSize="25sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:text="@string/youtshin_details"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="12.5dp"
                        android:src="@drawable/ic_share_black_24dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_marginTop="-16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/youtshin_story"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:textColor="@android:color/black"
                    android:text="@string/youtshin_story_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:text="@string/youtshin_readmore"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_green_dark"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_youtshin"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
          </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</ScrollView>