<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:background="@drawable/linkin_photo1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium_2"
                android:src="@drawable/ic_settings_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.CardView
                android:layout_marginTop="110dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_colorize_black_24dp"
                        android:layout_margin="@dimen/margin_medium"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_linkin_name"
                        android:text="@string/linkin_name"
                        android:layout_centerHorizontal="true"
                        android:textSize="24sp"
                        android:paddingTop="60dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_linkin_post"
                        android:layout_below="@id/tv_linkin_name"
                        android:text="@string/linkin_post"
                        android:textColor="@android:color/black"
                        android:layout_centerHorizontal="true"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_linkin_edu"
                        android:layout_below="@id/tv_linkin_post"
                        android:layout_centerHorizontal="true"
                        android:text="@string/linkin_edu"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_linkin_location"
                        android:layout_below="@id/tv_linkin_edu"
                        android:layout_centerHorizontal="true"
                        android:text="@string/linkin_location"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_linkin_info"
                        android:layout_below="@id/tv_linkin_location"
                        android:layout_centerHorizontal="true"
                        android:text="@string/linkin_info"
                        android:textSize="12sp"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_medium_2"
                        android:layout_marginBottom="@dimen/margin_medium_2"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="60dp"
                android:layout_gravity="center_horizontal"
                app:civ_border_width="2dp"
                app:civ_border_color="@android:color/white"
                android:src="@drawable/joke_3"/>
        </FrameLayout>

        <include
            layout="@layout/linkin_layout_secondpart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/color_accent_two"/>

            <LinearLayout
                android:padding="@dimen/margin_medium"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium">

                    <TextView
                        android:text="@string/linkin_strength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:src="@drawable/ic_close_black_24dp"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_mood_black_24dp"
                        android:layout_marginRight="@dimen/margin_medium"
                        android:layout_width="50dp"
                        android:layout_height="50dp"/>

                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/linkin_showcase"
                        android:textColor="@android:color/black"
                        android:textSize="14dp"
                        android:lineSpacingMultiplier="1.2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
